# tuto_flask_blog2

./: .dockerignore  .gitignore  2.htm  2_BAK.htm  Dockerfile  FlaskSQLAlchemy.py  README.md  TestAccentués_from_htmTPL.htm  TestEncodingOnLenovo.html  TestEncodingOnLenovo.html.bak  _projectsheet.txt  cabwill-draft0a.htm  cabwill-draft0a.htm.bak  cabwill.db  cabwill_1.py  cabwill_1.sh  database.db  example2.sqlite  hello.py  hello2.py  helloblog.py  htmTPL.htm  just.py  myscript.bashrc  package-lock.json  pao1.htm  projectsheet.txt  pyproject.toml  pytest.py  testalchemy1.py  tuto_flask_blog2.db  tuto_flask_blog2_Uedit.AlPoudre.pydsuperu.pui  tuto_flask_blog2_Uedit.prj  vscode-test1.py
ProjectMngmnt_Ignor/: MngScripts.py  src.txt
static/: LTF_2021a.css  style.css  w3_beautyfied.css
static/CSS/: bootstrap.css  custom.css
templates/: HolyGrail1.htm  HolyGrail1.htm.bak  Lien vers HolyGrail1.htm  base.html  pao1_a.htm
templates/cabwill/: JustTheTree.htm  JustTheTree.htm.bak  base_cw.htm  base_cw.htm.bak  base_cw_BAK.htm  cabwill_base1.htm  cabwill_base1.htm.bak  pagestree.htm  pagestree.htm.bak  sans titre.htm  zzz_pagestree.htm
templates/cabwill/TplModels/: _LTF_PageModel_GEN.htm  _LTF_PageModel_PlainJ2.htm
templates/cabwill/pages/: 1.htm  1.htm.bak  2.htm  HistRchch.htm  HistRchchPlain.htm  HistRchch_bak.htm  HistRchch_old.htm
templates/justwebsite1/: edit.html  justindex.html  sectionfooter.html  zzzzzzz_base.html
